--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ pylint == 2.15.3       ## for linting Python code (used in the lint target)
 
 # web
 fastapi == 0.85.0      ## web framework (if relevant to project)
+flake8==6.0.0
+pytest-cov==4.1.0
+pandas==1.4.3
+numpy==1.22.0
