--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
+        python-version: '3.12'
+
+    - name: Install distutils for Python 3.12
+      run: sudo apt-get update && sudo apt-get install -y python3.12-distutils
 
     - name: Cache dependencies
       uses: actions/cache@v3
@@ -37,6 +40,11 @@ jobs:
         pip install pytest pytest-cov
         pytest --cov=your_package_name
 
-    - name: Install distutils
-      run: sudo apt-get update && sudo apt-get install -y python3-distutils
+    - name: Upload test report (optional)
+      run: pytest --junitxml=test-results.xml
+    - name: Upload test report
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: test-results.xml
 
