--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-# devops
-black == 22.3.0        ## formatting (used in the format and check-format targets)
-click == 8.1.3         ## dependency of black, useful for command-line interfaces
-pytest == 7.4.0        ## for running tests (used in the test and coverage targets)
-pytest-cov == 4.0.0    ## for measuring test coverage (used in the coverage target)
-pylint == 2.15.3       ## for linting Python code (used in the lint target)
+# Core tools for building and installing packages
+setuptools
+wheel
 
-# web
-fastapi == 0.85.0      ## web framework (if relevant to project)
-flake8==6.0.0
-pandas==1.4.3
-numpy==1.22.0
+# DevOps tools
+black==22.3.0        # formatting (used in the format and check-format targets)
+click==8.1.3         # dependency of black, useful for command-line interfaces
+pylint==2.15.3       # for linting Python code (used in the lint target)
 
 # Testing and Linting tools
-flake8==6.0.0
-pytest>=7.0.0
-pytest-cov==4.0.0
+pytest==7.4.0        # for running tests (used in the test and coverage targets)
+pytest-cov==4.0.0    # for measuring test coverage (used in the coverage target)
+flake8==6.0.0        # linting tool
+
+# Web development
+fastapi==0.85.0      # web framework (if relevant to project)
+
+# Data manipulation
+pandas==1.4.3
+numpy==1.22.0
