--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,11 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install distutils for Python 3.12
-      run: sudo apt-get update && sudo apt-get install -y python3.12-distutils
+    - name: Install setuptools and distutils
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools
+        pip install distlib  # Note: This package includes similar tools to distutils, which may help resolve the issues.
 
     - name: Cache dependencies
       uses: actions/cache@v3
@@ -26,9 +29,7 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
 
     - name: Lint with flake8
       run: |
@@ -47,4 +48,3 @@ jobs:
       with:
         name: test-results
         path: test-results.xml
-
