--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.12'
-
-    - name: Install setuptools and distutils
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools
-        pip install distlib  # Note: This package includes similar tools to distutils, which may help resolve the issues.
+        python-version: '3.11'  # Downgrade to Python 3.11
 
     - name: Cache dependencies
       uses: actions/cache@v3
@@ -29,7 +23,9 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Lint with flake8
       run: |
@@ -48,3 +44,4 @@ jobs:
       with:
         name: test-results
         path: test-results.xml
+
