--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,20 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+      
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.11'  # Downgrade to Python 3.11
-
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
@@ -30,18 +23,13 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 .
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        # ignoring specific style issues for convenience
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --ignore=E302,E305
 
-    - name: Test with pytest and coverage
+    - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        pytest --cov=your_package_name
-
-    - name: Upload test report (optional)
-      run: pytest --junitxml=test-results.xml
-    - name: Upload test report
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: test-results.xml
-
+        pip install pytest
+        pytest
